# amplifierd

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  feature-consideration.md  pyproject.toml
docs/: HOSTING.md  api-usage.md  building-apps.md  bundles.md  plugins.md  relationship-to-distro.md  terminology.md
docs/design/: architecture.md  endpoints.md  errors.md  events.md
docs/plans/: 2026-03-27-session-auth-proxy-aware.md
src/amplifierd/: __main__.py  app.py  cli.py  config.py  daemon_session.py  display.py  errors.py  persistence.py  plugins.py  port_utils.py  providers.py  spawn.py
src/amplifierd/models/: __init__.py  agents.py  bundles.py  context.py  errors.py  events.py  modules.py  sessions.py
src/amplifierd/routes/: __init__.py  (+10 more)
tests/: test_agents_routes.py  test_app.py  test_approvals_routes.py  test_building_apps_hosting.py  test_bundles_routes.py  test_cli.py  test_config.py  test_context_routes.py  test_daemon_session.py  test_errors.py  test_event_bus.py  test_events_route.py  test_fork_routes.py  test_health.py  test_hosting_docs.py  test_models.py  test_modules_routes.py  test_package_skeleton.py  test_persistence.py  test_plugins.py  test_providers.py  test_readme_config_table.py  test_routes_init.py  test_security_middleware.py  test_security_origins.py  test_session_creation.py  test_session_handle.py  test_session_history.py  test_session_index.py  test_session_manager.py  test_sessions_routes.py  test_spawn_event_forwarding.py  test_transcript.py  test_transport_event.py  test_validation_routes.py
(+8 files in other folders)
